--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+.container{
+	display:flex;
+	flex-direction:row;
+	justify-content:center;
+	
+}
+.item{
+	width:50px;
+	height:50px;
+}
