--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 
 /* Your CSS Code here. */
-.container{
+.holder{
 	display:flex;
 	flex-direction:row;
 	justify-content:center;
-	
+	flex-wrap:wrap;
 }
 .item{
-	width:50px;
-	height:50px;
+	background-color:red;
+	border:1px solid black;
+	width:100px;
+	height:100px;
 }
